--- a/swpeople.css
+++ b/swpeople.css
@@ -13,10 +13,12 @@
     text-align: center;
 }
 .names .box p{
-    color: #000000;
+    color: #F67280;
 }
+
+
 
 .names{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
 }
