--- a/swpeople.css
+++ b/swpeople.css
@@ -2,8 +2,8 @@
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    /* margin: 0 auto;
-    width: 1260px; */
+     margin: 0 auto;
+    width: 1260px; 
 }
 
 .container div {
@@ -22,3 +22,5 @@
     display: flex;
     justify-content: space-around;
 }
+
+
