--- a/main.css
+++ b/main.css
@@ -171,12 +171,12 @@ footer a {
 h3 {
   color: black;
 }
-.man-holder {
+.fatPplContainer {
   text-align: center;
   border: 2px solid black;
 }
 
-.woman-holder {
+.skinnyPplContainer {
   text-align: center;
   border: 2px solid black;
 }
