--- a/pokemon.css
+++ b/pokemon.css
@@ -6,12 +6,24 @@
   flex-direction: row;
   flex-wrap: wrap;
 }
+body {
+ background: #F8B195;
+
+}
 .front-image {
   border-width: thick;
+  background-color:white;
 }
 .title {
   justify-content: center;
   font-size: 59px;
+}
+
+h2 {
+  font-weight: bold;
+  color: white;
+  font-size: 39px;
+  background-color: #355C7D;
 }
 
 figure {
@@ -25,6 +37,7 @@ figure {
   height: 200px;
   max-height: 200px;
   background: url(pokeball_PNG8.png) no-repeat center center;
+  background-color: blue;
 
 }
 .back > img{
@@ -36,12 +49,13 @@ figure {
 .card > p {
   text-align: center;
   font-weight: bold;
+  color: #355C7D;
 }
 .card > div {
   display: flex;
   width: 200px;
   max-width: 200px;
-  color:black;
+  color:#355C7D;
   font-weight: bold;
 
 }
@@ -50,8 +64,11 @@ button {
   width: 300px;
   height: 80px;
   font-size: 1.5rem;
-  background-color: #696664;
-  color: rgb(19, 32, 216);
+  background-color: #355C7D;
+  color: white;
+  position: relative;
+  font-weight: bold;
+  text-decoration: underline;
 }
 
 img {
